2012-04-30  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.ch: Merge changes from XeTeX repository.

2012-04-24  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.ch: Merge changes from XeTeX repository.

2012-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex-hz.ch: Added copyright statement.
	Removed useless blank lines at end of change sets.

2012-04-18  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex-hz.ch, xetex.ch: Merge changes from XeTeX repository.

2012-03-25  Khaled Hosny  <khaledhosny@eglug.org>

	* XeTeX_ext.h, xetex.ch: Merge changes from XeTeX repository.

2012-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c, xetex.h (Byte): Remove temporary #define to my_Byte
	and subsequent #undef.  The typedef conflict between TECkit_Common.h
	and zlib is now handled differently (by zlib and TECkit).

2012-03-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXGrLayout.h: Declare XeTeXGrTextSource::featureVariations()
	required for graphite-2.4.

2012-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.ch: Remove test for end-of-file after undump.
	* xetex.defines: Remove weof().

2012-02-11  Jonathan Kew  <jfkthame@gmail.com>

	* XeTeX_ext.c (makefontdef): pass font pathname to xdvipdfmx
	  whenever possible, to avoid fontconfig search mismatches

	* xetex.ch (XeTeX_version_string): bump to .6.

2012-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.ch: Adapt to zlib-1.2.6 (problem found by Akira).
	From zlib-1.2.6/ChangeLog: Fix gzeof() to behave just like
	  feof() when read is not past end of file

2011-09-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.h: Do not #include "XeTeXOTMath.h".

2011-08-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: fix to allow font definition like
	\font\x="[msmincho.ttc:1]"

2011-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.ch: Fix an off-by-one bug initializing mubyte_cswrite.
	From Roderich Schupp <roderich.schupp@googlemail.com>,