@@ -1,6 +1,8 @@
-2012-04-30  Khaled Hosny  <khaledhosny@eglug.org>
+2012-05-05  Khaled Hosny  <khaledhosny@eglug.org>
 
-	* xetex.ch: Merge changes from XeTeX repository.
+	* xetex.ch, xetex.defines, XeTeX_ext.h, am/xetex.am: Use makecpool
+	instead of out pool2c.pl.
+	* pool2c.pl: Removed.
 
 2012-04-24  Khaled Hosny  <khaledhosny@eglug.org>
 
